--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
     <h1>SVT-Bite</h1>
     <nav>
       <a href="index.html">Home</a> |
-      <a href="menu.html">Dishes</a> |
-      <a href="dessert.html">Sweets</a> |
-      <a href="contact.html">Accounts</a>
+      <a href="menu.html">Meals</a> |
+      <a href="dessert.html">Desserts</a> |
+      <a href="contact.html">Contact Us</a>
     </nav>
   </header>
 
