--- a/dessert.html
+++ b/dessert.html
@@ -52,7 +52,7 @@
 
   
       <div class="menu-item">
-        <img src="assets/images/IMG_5548.jpg" alt="Joshua Cake" />
+        <img src="assets/images/sweet1.jpg" alt="Joshua Cake" />
         <h3> Cupcake</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">
@@ -80,21 +80,21 @@
 
       <!-- وصفات "Coming Soon" -->
       <div class="menu-item">
-        <img src="" alt="Dessert 2" />
+        <img src="assets/images/sweet2.jpg" alt="Dessert 2" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">New homemade dessert will be added soon.</p>
       </div>
 
       <div class="menu-item">
-        <img src="" alt="Dessert 3" />
+        <img src="assets/images/sweet3.jpg" alt="Dessert 3" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">New homemade dessert will be added soon.</p>
       </div>
 
       <div class="menu-item">
-        <img src="" alt="Dessert 4" />
+        <img src="assets/images/sweet4.jpg" alt="Dessert 4" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">New homemade dessert will be added soon.</p>
