--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,7 @@
     <section class="menu-section">
 
       <div class="menu-item">
-        <img src="assets/images/IMG_5547.jpg" alt="Shabu Shabu" />
+        <img src="assets/images/meal1.jpg" alt="Shabu Shabu" />
        <h3>hot dog Sandwiches</h3>
         <button class="read-more-btn">the recipe</button>
 <p class="more-text">
@@ -86,21 +86,21 @@
 
 
       <div class="menu-item">
-        <img src="" alt="Recipe 2" />
+        <img src="assets/images/meal2.jpg" alt="Recipe 2" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">New homemade meal will be added soon.</p>
       </div>
 
       <div class="menu-item">
-        <img src="" alt="Recipe 3" />
+        <img src="assets/images/meal3.jpg" alt="Recipe 3" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">New homemade meal will be added soon.</p>
       </div>
 
       <div class="menu-item">
-        <img src="" alt="Recipe 4" />
+        <img src="assets/images/meal4.jpg" alt="Recipe 4" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">New homemade meal will be added soon.</p>
