--- a/dessert.html
+++ b/dessert.html
@@ -99,6 +99,26 @@
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">New homemade dessert will be added soon.</p>
       </div>
+  <div class="menu-item">
+        <img src="assets/images/sweet5.jpg" alt="Dessert 4" />
+        <h3>Coming Soon</h3>
+        <button class="read-more-btn">the recipe</button>
+        <p class="more-text">New homemade dessert will be added soon.</p>
+      </div>
+
+        <div class="menu-item">
+        <img src="assets/images/sweet6.jpg" alt="Dessert 4" />
+        <h3>Coming Soon</h3>
+        <button class="read-more-btn">the recipe</button>
+        <p class="more-text">New homemade dessert will be added soon.</p>
+      </div>
+
+        <div class="menu-item">
+        <img src="assets/images/sweet7.jpg" alt="Dessert 4" />
+        <h3>Coming Soon</h3>
+        <button class="read-more-btn">the recipe</button>
+        <p class="more-text">New homemade dessert will be added soon.</p>
+      </div>
 
     </section>
   </main>
