--- a/menu.html
+++ b/menu.html
@@ -106,6 +106,13 @@
         <p class="more-text">New homemade meal will be added soon.</p>
       </div>
 
+       <div class="menu-item">
+        <img src="assets/images/meal5.jpg" alt="Recipe 4" />
+        <h3>Coming Soon</h3>
+        <button class="read-more-btn">the recipe</button>
+        <p class="more-text">New homemade meal will be added soon.</p>
+      </div>
+
     </section>
   </main>
 
