--- a/dessert.html
+++ b/dessert.html
@@ -56,26 +56,27 @@
         <h3> Cupcake</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">
-          <strong>الوصفة:</strong><br><br>
+  <strong>الوصفة:</strong><br><br>
 
-          1. 1 كوب ونصف دقيق<br>
-          2. نصف كوب نشا<br>
-          3. 1 كوب حليب<br>
-          4. 3 بيضات<br>
-          5. نصف كوب زيت<br>
-          6. 1 كوب سكر<br>
-          7. ملعقة فانيليا<br>
-          8. ملعقة صغيرة باكينغ باودر<br>
-          9. رشة ملح<br>
-          10. ننخل الدقيق والنشا والباكنغ باودر سوا مرتين.<br>
-          11. نخفق البيض مع الفانيليا والملح حتى يصبح رغاوي، ثم نضيف السكر ونخفق حتى يصبح كريمي.<br>
-          12. نخلط الحليب والزيت، ثم نضيف المواد الجافة تدريجيًا ونضربها جيدًا.<br>
-          13. نخلط خليط الحليب والزيت مع كريمة البيض براحة حتى يتمازجوا جيدًا.<br>
-          14. نرص ورق الكب كيك في صينية مخصصة، ونملأ الخليط فقط حتى 3/4 الارتفاع لأنه سيرتفع في الفرن.<br>
-          15. ندخله في فرن مسخن مسبقًا على درجة حرارة 180°م من الأسفل فقط، وبعد أن ينضج يمكن فتحه من الأعلى قليلًا ليأخذ اللون الذهبي.<br><br>
+  كوب ونصف دقيق<br>
+  نصف كوب نشا<br>
+  كوب حليب<br>
+  3 بيضات<br>
+  نصف كوب زيت<br>
+  كوب سكر<br>
+  ملعقة فانيليا<br>
+  ملعقة صغيرة باكينغ باودر<br>
+  رشة ملح<br><br>
+  طريقة التحضير:<br><br>
+  ننخل الدقيق والنشا والباكنغ باودر سوا مرتين.<br>
+  نخفق البيض مع الفانيليا والملح حتى يصبح رغاوي، ثم نضيف السكر ونخفق حتى يصبح كريمي.<br>
+  نخلط الحليب والزيت، ثم نضيف المواد الجافة تدريجيًا ونضربها جيدًا.<br>
+  نخلط خليط الحليب والزيت مع كريمة البيض براحة حتى يتمازجوا جيدًا.<br>
+  نرص ورق الكب كيك في صينية مخصصة، ونملأ الخليط فقط حتى 3/4 الارتفاع لأنه سيرتفع في الفرن.<br>
+  ندخله في فرن مسخن مسبقًا على درجة حرارة 180°م من الأسفل فقط، وبعد أن ينضج يمكن فتحه من الأعلى قليلًا ليأخذ اللون الذهبي.<br><br>
 
-          وبالعافية عليكم 😘
-        </p>
+  وبالعافية عليكم 😘
+</p>
       </div>
 
       <!-- وصفات "Coming Soon" -->
@@ -83,41 +84,178 @@
         <img src="assets/images/sweet2.jpg" alt="Dessert 2" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
-        <p class="more-text">New homemade dessert will be added soon.</p>
+       <p class="more-text">
+<strong>للكراميل:</strong><br>
+كوب سكر نخته في طوة أو حلة ما بتلصق لحدي ما يذوب ويتحول لونه لعسلي.<br>
+لازم النار تكون هادية عشان ما يحترق.<br>
+أول ما يذوب ولونه يزبط نصبه في قالب الفرن أو قوالب صغيرة بتدخل الفرن بسرعة عشان ما يتجمد.<br><br>
+
+<strong>للكريمة:</strong><br>
+كباية موية<br>
+كباية حليب كامل الدسم<br>
+كباية حليب بودرة<br>
+نص كباية سكر<br>
+٣ بيضات بحرارة الغرفة<br>
+ملعقة كبيرة فانيليا تكون جودتها كويسة<br>
+ملعقة صغيرة خل<br><br>
+
+نخلط المكونات كلها في الخلاط لمدة دقيقتين، بعدين نصفيها في القالب.<br>
+نخت القالب في صينية فرن أكبر ونملاها موية مغلية لحدي نصها بحيث إنو القالب يكون في حمام مائي.<br>
+وندخله الفرن بدرجة حرارة 180 لمدة ساعة.<br><br>
+
+<strong>نصائح عشان يزبط من أول مرة:</strong><br>
+بنتأكد إنو استوى بأنو يكون jiggly شوية، ولما ندخل فيه شوكة يطلع فيها على خفيف.<br>
+لو طلعت مليانة كريمة معناها لسه عليه شوية.<br>
+ولو طلعت نظيفة معناها overcooked.<br><br>
+
+تاني حاجة لازم الحرارة ما تكون عالية شديد عشان ما يتملي فقاقيع أو يتفتفت.<br><br>
+
+وبالعافية عليكم يارب ♥️
+</p>
+
       </div>
 
       <div class="menu-item">
         <img src="assets/images/sweet3.jpg" alt="Dessert 3" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
-        <p class="more-text">New homemade dessert will be added soon.</p>
+       <p class="more-text">
+زي الغيوم وتذوب ف الفم 😋<br>
+والصوصات 🔥🔥🔥<br><br>
+
+<strong>الطريقة:</strong><br>
+
+<strong>الوصفة:</strong><br>
+كباية إلا ربع حليب<br>
+٣ كبابي دقيق<br>
+رشة ملح<br>
+ملعقتين سكر<br>
+ملعقتين كبار زبادي<br>
+نص كباية زيت<br>
+ملعقة كبيرة خميرة<br>
+ملعقة صغيرة بيكينغ باودر<br>
+ملعقتين دريم ويب (اختياري بس بتدي طعم جميل زي رولز سينابون الأصلي)<br><br>
+
+نخلط المواد السائلة أول، بعدين نخلص المواد الجافة ونضيفها تدريجي.<br>
+العجينة لازم تكون طررررية بس بتفك من الإيد.<br>
+بعد تخمر ويتضاعف حجمها نفردها لا سميكة شديد ولا رهيفة، ونغطيها بالحشوة ونلفها ونقطعها بالخيط عشان الشكل يكون منتظم، ونغطيها في صينية الفرن 10 دقايق قبل الخبز.<br>
+نخبزها في فرن محمى مسبقًا على درجة حرارة 180.<br><br>
+
+<strong>الحشوة:</strong><br>
+السكر حسب الرغبة (أنا بخت 4 ملاعق)<br>
+ملعقتين كبار قرفة<br>
+ملعقة صغيرة نسكافيه<br>
+زبدة<br><br>
+
+<strong>الصوصات:</strong><br>
+
+<strong>الصوص الأبيض:</strong><br>
+حليب مكثف محلى كباية + 5 مثلثات جبنة لافشكري<br><br>
+
+<strong>صوص الكراميل:</strong><br>
+كباية سكر + 3 ملاعق موية، نختهم في النار لحدي ما لونه يبقى عسلي غامق حبة.<br>
+بعدين نضيف ملعقتين زبدة ونقلبه، وآخر شيء نضيف علبة قشطة ونطفي النار.<br>
+نخلطوه كويس ونخلوه يبرد.<br>
+إذا طلع القوام تقيل شوية ممكن نضيف حليب بالملعقة لحدي ما نصل للقوام العايزينه.<br>
+</p>
+
       </div>
 
       <div class="menu-item">
         <img src="assets/images/sweet4.jpg" alt="Dessert 4" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
-        <p class="more-text">New homemade dessert will be added soon.</p>
+        <p class="more-text">
+<strong>الطريقة:</strong><br>
+نصف كيلو فراولة طازجة أو مجمدة<br>
+كوب سكر<br>
+عصرة ليمون<br><br>
+
+نقلبهم مع بعض في حلة أو طوة ونستنى شوية عشان الأحماض في الفراولة والليمون بتخلي السكر يذوب.<br>
+بعدين نرفعها على نار متوسطة لحدي ما يذوب السكر وتبقى سائلة، بعدين نخفض النار ونخليها تغلى وتتقل برواق.<br>
+بعدين نكسر الفراولة حسب الرغبة، إذا بتحبوها smooth مفروض تتخلط بالخلاط الكهربائي، وإذا بتحبوا فيها قطع زيي أنا هرستها بالمضرب الكهربائي على خفيف.<br>
+وخليتها شوية كمان في النار لحدي ما قوامها بقى أخف من اللي في الصورة شوية، عشان لما تبرد بتتقل أكتر.<br>
+عشان تتأكدوا إنو وصلت للقوام المطلوب، شيلوا شوية من المربى بالملعقة وخلوها في صحن يبرد، بعدين نميل الصحن ونتأكد إنها جامدة وما runny لسة.<br>
+انتبهوا أثناء الغليان بتعمل رغوة لونها فاتح، طلعوها برا كل شوية.<br><br>
+
+وبالعافية عليكم 🥰
+</p>
+
       </div>
   <div class="menu-item">
         <img src="assets/images/sweet5.jpg" alt="Dessert 4" />
-        <h3>Coming Soon</h3>
+        <h3>Brownies 🤤</h3>
         <button class="read-more-btn">the recipe</button>
-        <p class="more-text">New homemade dessert will be added soon.</p>
+        <p class="more-text">
+<strong>المكونات:</strong><br>
+نص كباية زبدة<br>
+نص كباية دقيق<br>
+نص كباية كاكاو مر<br>
+كباية إلا ربع سكر<br>
+رشة ملح<br>
+بيضتين<br>
+ملعقة صغيرة فانيليا<br><br>
+
+<strong>الطريقة:</strong><br>
+نضرب الزبدة والسكر والبيض والفانيليا بالمضرب لحدي ما يذوب السكر والخليط لونه يفتح، بعدين ننخل الدقيق والكاكاو ورشة الملح ونخلطهم مع المواد السائلة.<br>
+نجهز الصينية ندهنها زبدة كويس عشان ما تلزق أو نحط ورق زبدة.<br>
+نخبزها في فرن محمى مسبقًا 180 درجة لمدة نصف ساعة.<br><br>
+
+وبالعافية عليكم يارب 💕
+</p>
       </div>
 
         <div class="menu-item">
         <img src="assets/images/sweet6.jpg" alt="Dessert 4" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
-        <p class="more-text">New homemade dessert will be added soon.</p>
+        <p class="more-text">
+<strong>المكونات:</strong><br>
+كباية زبادي<br>
+نصف كباية زيت أو سمن<br>
+نصف كباية سكر<br><br>
+
+<strong>الطريقة:</strong><br>
+نخلطهم مع بعض بالمضرب العادي.<br>
+بعدين نضيف كبايتين دقيق سمولينا وملعقتين دقيق وملعقة كبيرة بيكينغ باودر.<br>
+نخلطهم مع المكونات السائلة.<br>
+نصب الخليط في صينية التارت وندخلها الفرن على درجة حرارة 180 من تحت بس، وبعد ربع ساعة نفتح الحرارة من فوق عشان تحمر من فوق وتاخد لون.<br>
+نطلعها ونسقيها شيرة خفيفة (كباية سكر وكباية موية).<br>
+بعد تبرد نقلبها في صحن أو صينية التقديم، ونجهز توبينغ الشوكولاتة (ملعقتين نوتيلا + نصف علبة قشطة) أو أي صوص شوكولاتة تقيل تاني بتفضلوه.<br>
+نزينها بالفول السوداني أو أي زينة تانية تحبوها.<br><br>
+
+وبالهناء عليكم 😍
+</p>
+
       </div>
 
         <div class="menu-item">
         <img src="assets/images/sweet7.jpg" alt="Dessert 4" />
         <h3>Coming Soon</h3>
         <button class="read-more-btn">the recipe</button>
-        <p class="more-text">New homemade dessert will be added soon.</p>
+       <p class="more-text">
+
+<strong>المكونات:</strong><br>
+عجينة قلاش (أنا استخدمت نصف العجينة)<br>
+٣ كبابي حليب<br>
+علبة قشطة<br>
+نص كباية سكر<br>
+ملعقة صغيرة فانيليا<br>
+مكسرات (زبيب، جوز هند، فول سوداني)<br><br>
+
+<strong>الطريقة:</strong><br>
+نقطع القلاش قطع صغيرة ونفركه بشوية زيت أو سمنة لحدي ما يتغطى كله.<br>
+نخليه في صينية فرن وندخله الفرن لحدي ما يحمر ويبقى لونه ذهبي (انتبهوا عليه بيحترق بسرعة).<br>
+نخلط الحليب والسكر والفانيليا والقشطة مع بعض ونرفعها على النار لحدي ما تغلي.<br>
+بعد ما طلعنا القلاش من الفرن، نرصه في الصينية اللي نريد نعمل فيها أم علي (يفضل تكون صينية فرن غريقة).<br>
+نضيف المكسرات بالكمية المطلوبة، ثم نسكب فوقها خليط الحليب والقشطة ونخليها 10 دقائق تتشربه.<br>
+<br>
+<strong>للوجه:</strong><br>
+نجيب ملعقة كبيرة قشطة + ملعقتين حليب + ملعقة صغيرة سكر، وندهن الوجه بالخليط.<br>
+ندخلها الفرن من فوق فقط لحدي ما تحمر.<br>
+نزينها بالزبيب والمكسرات 😋
+</p>
+
       </div>
 
     </section>
