--- a/menu.html
+++ b/menu.html
@@ -47,56 +47,126 @@
 <strong>الوصفة:</strong><br><br>
 
 <strong>الساندويش الأول: هوت دوغ فاهيتا</strong><br>
-1. نجهز الخضار (بصل، جزر، فلفل أخضر) أو أي نوع خضار تحبونه ونقطعها شرائح.<br>
-2. نقطع الهوت دوغ إلى قطع صغيرة.<br>
-3. نقلب الخضار في قليل من الزيت على نار هادئة، ثم نضيف الهوت دوغ.<br>
-4. بعد أن يتحمروا، نضيف كمية بسيطة من الماء، ملح، فلفل أسود، رشة كزبرة، ملعقة صغيرة صلصة طماطم، وملعقة صغيرة صويا صوص (اختياري).<br>
-5. نقلبهم حتى تستوي وتنشف الموية.<br>
-6. نشيل الخليط من الطوة، ونفتح العيشة ونشوي الجزء الداخلي قليلًا ليأخذ نكهة.<br>
-7. ندهن العيش بمايونيز أو تومية، نضع خس أو ملفوف مبشور، ثم نضيف الفاهيتا.<br>
-8. الساندويش جاهز للتقديم 😍<br><br>
+نجهز الخضار (بصل، جزر، فلفل أخضر) أو أي نوع خضار تحبونه ونقطعها شرائح.<br>
+نقطع الهوت دوغ إلى قطع صغيرة.<br>
+نقلب الخضار في قليل من الزيت على نار هادئة، ثم نضيف الهوت دوغ.<br>
+بعد أن يتحمروا، نضيف كمية بسيطة من الماء، ملح، فلفل أسود، رشة كزبرة، ملعقة صغيرة صلصة طماطم، وملعقة صغيرة صويا صوص (اختياري).<br>
+نقلبهم حتى تستوي وتنشف الموية.<br>
+نشيل الخليط من الطوة، ونفتح العيشة ونشوي الجزء الداخلي قليلًا ليأخذ نكهة.<br>
+ندهن العيش بمايونيز أو تومية، نضع خس أو ملفوف مبشور، ثم نضيف الفاهيتا.<br>
+الساندويش جاهز للتقديم 😍<br><br>
 
 <strong>الساندويش الثاني: هوت دوغ بالجبنة والخس</strong><br>
-1. نحمر الهوت دوغ في الزيت على النار، أو ندهنه بالزبدة وندخله الفرن 10 دقائق، أو يمكن تسخينه في المايكروويف.<br>
-2. في واحدة من العيشات، نضيف صوص جبنة شيدر، كاتشب، وخس.<br>
-3. الساندويش جاهز للتقديم ♥️😋<br><br>
+نحمر الهوت دوغ في الزيت على النار، أو ندهنه بالزبدة وندخله الفرن 10 دقائق، أو يمكن تسخينه في المايكروويف.<br>
+في واحدة من العيشات، نضيف صوص جبنة شيدر، كاتشب، وخس.<br>
+الساندويش جاهز للتقديم ♥️😋<br><br>
 
 <strong>الساندويش الثالث: هوت دوغ بالجبن المتنوع والشيبس</strong><br>
-1. نحمر الهوت دوغ بنفس طريقة الساندويش الثاني.<br>
-2. في العيشة، نضع مايونيز، جبنة مثلثات، جبنة شيدر، وشيبس بالجبنة.<br>
-3. الساندويش جاهز للتقديم ♥️😋<br><br>
+نحمر الهوت دوغ بنفس طريقة الساندويش الثاني.<br>
+في العيشة، نضع مايونيز، جبنة مثلثات، جبنة شيدر، وشيبس بالجبنة.<br>
+الساندويش جاهز للتقديم ♥️😋<br><br>
 
 <strong>صوص المايونيز:</strong><br>
-- 1 كوب حليب<br>
-- 1 ملعقة صغيرة ملح<br>
-- 1 ملعقة عصير ليمون<br>
-- 1 ملعقة خل<br>
-- 4 جبنة مثلثات<br>
-- نخلط المكونات في الخلاط، ثم نضيف 1.5 كوب زيت تدريجيًا حتى يتماسك المايونيز.<br>
-- يحفظ في الثلاجة.<br><br>
+كوب حليب<br>
+ملعقة صغيرة ملح<br>
+ملعقة عصير ليمون<br>
+ملعقة خل<br>
+4 جبنة مثلثات<br>
+نخلط المكونات في الخلاط، ثم نضيف 1.5 كوب زيت تدريجيًا حتى يتماسك المايونيز.<br>
+يحفظ في الثلاجة.<br><br>
 
 <strong>صوص الشيدر:</strong><br>
-- 3/4 كوب حليب<br>
-- 1 ملعقة دقيق<br>
-- رشة ملح<br>
-- نخلط المكونات جيدًا، ثم نرفعها على النار.<br>
-- نضيف نصف كوب جبنة شيدر مبشورة أو صوص الشيدر الجاهز المتوفر في البقالات.<br>
+3/4 كوب حليب<br>
+ملعقة دقيق<br>
+رشة ملح<br>
+نخلط المكونات جيدًا، ثم نرفعها على النار.<br>
+نضيف نصف كوب جبنة شيدر مبشورة أو صوص الشيدر الجاهز المتوفر في البقالات.<br>
 </p>
       </div>
 
 
       <div class="menu-item">
         <img src="assets/images/meal2.jpg" alt="Recipe 2" />
-        <h3>Coming Soon</h3>
+        <h3>Butter chicken 😋</h3>
         <button class="read-more-btn">the recipe</button>
-        <p class="more-text">New homemade meal will be added soon.</p>
+        <p class="more-text">
+<strong>الوصفة:</strong><br><br>
+
+<strong>الدجاج:</strong><br>
+أول شيء قطعت صدور دجاج فيليه قطع صغيرة وغسلتها بخل.<br>
+تبّلتها بملعقة صغيرة عصير ليمون وكزبرة وفلفل أسود وقرفة وزنجبيل وبهارات دجاج (أو بهار كاري).<br>
+ذوبت ملعقتين كبار زبدة في الطوة وكبيت فيها الدجاج وقلبته لحدي ما استوى وخليته على جنب.<br><br>
+
+<strong>الصلصة:</strong><br>
+قطعت بصلة كبيرة وطماطمتين وقلبته في الزيت لحدي ما ذبلت.<br>
+بعدها ضفت شوية موية وبهار كاري ونصف مكعب ماجي وملعقة صلصة وخليتهم في نار هادئة يطبخوا.<br>
+بعدها خلطت البصل والطماطم ناعم شديد، وكبيته في الدجاج، بكون لونه برتقالي داكن.<br>
+أول ما بدأ يغلي ضفت عليه نص كباية (حليب مخلوط بملعقة دقيق) بدل كريمة الطبخ.<br>
+بعدين قلبته شوية وطفيت النار.<br><br>
+
+<strong>الرز:</strong><br>
+قلبته في زبدة شوية، بعدين ضفت موية مغلية وملح ومكعب ماجي.<br>
+غطيته وخليته يطبخ في نار هاااادية (كبايتين موية لكل كباية رز).<br><br>
+
+وبالعافية عليكم 💕<br><br>
+
+المهم واضح إني مجتهدة أوريكم مناكيري الجديد؟ 🚶🏻‍♀️😂
+</p>
+
       </div>
 
       <div class="menu-item">
         <img src="assets/images/meal3.jpg" alt="Recipe 3" />
-        <h3>Coming Soon</h3>
+        <h3>Kung pao chicken with homemade Chinese noodles</h3>
         <button class="read-more-btn">the recipe</button>
-        <p class="more-text">New homemade meal will be added soon.</p>
+       <p class="more-text">
+<strong>الوصفة:</strong><br><br>
+
+<strong>الدجاج:</strong><br>
+نصف كيلو دجاج فيليه نقطعه مربعات ونتبله، بعدين نغطيه بالدقيق ونقليه بالزيت.<br><br>
+
+<strong>تتبيلة الدجاج:</strong><br>
+ملعقتين كبار صويا صوص<br>
+ملعقة نشا<br>
+ملعقة عصير ليمون<br>
+ملعقة زيت<br>
+نخلي الدجاج المقلي على جنب.<br><br>
+
+<strong>الخضار:</strong><br>
+جزر وفلفلية وثوم مقطعة شرائح طويلة ورقيقة + فول سوداني + (شطة خضراء حسب الرغبة).<br><br>
+
+<strong>صوص الدجاج:</strong><br>
+ملعقتين ونص صويا صوص<br>
+ملعقتين سكر<br>
+ملعقتين كاتشب<br>
+ملعقة نشا<br>
+٤ ملاعق موية<br>
+ملعقة عصير ليمون<br>
+نمزجهم كويس ونخليه على جنب.<br><br>
+
+<strong>طريقة عمل الدجاج:</strong><br>
+نقلب الثوم في شوية زيت مع الخضار والفول السوداني حوالي دقيقتين.<br>
+بعدين نضيف الصوص اللي جهزناه فوق ونقلب.<br>
+أول ما يبدأ يتقل نضيف الدجاج المقلي ونقلبه شوية ونطفي النار.<br>
+كدا الدجاج خلص.<br><br>
+
+<strong>للنودلز:</strong><br>
+نجهز صوص النودلز:<br>
+نص كباية صويا صوص<br>
+ملعقة زيت سمسم<br>
+ملعقة عصير ليمون<br>
+ملعقتين سكر<br>
+ملعقتين كاتشب<br>
+نخلطهم في حلة، أول ما يبدأ يغلي نضيف نص موية مذوب فيها ملعقة نشا.<br>
+أول ما يبدأ الصوص يتقل نضيف نودلز مسلوقة جاهزة أو اسباغيتي مسلوقة إذا ما متوفر.<br>
+نقلب النودلز مع الصوص ونطفي النار.<br><br>
+
+ممكن يتعمل رز أبيض بدل النودلز.<br>
+طريقة النودلز المنزلية بنزلها في بوست تاني إن شاء الله 💕<br><br>
+
+<strong>ملحوظة:</strong> انتبهوا الوصفة مافيها ملح لأن الصويا صوص مالح بطبعه‼️
+</p>
+
       </div>
 
       <div class="menu-item">
