Update dessert names from 'Coming Soon' to actual names

--- a/dessert.html
+++ b/dessert.html
@@ -82,7 +82,7 @@
       <!-- وصفات "Coming Soon" -->
       <div class="menu-item">
         <img src="assets/images/sweet2.jpg" alt="Dessert 2" />
-        <h3>Coming Soon</h3>
+        <h3>caramel cream</h3>
         <button class="read-more-btn">the recipe</button>
        <p class="more-text">
 <strong>للكراميل:</strong><br>
@@ -117,7 +117,7 @@
 
       <div class="menu-item">
         <img src="assets/images/sweet3.jpg" alt="Dessert 3" />
-        <h3>Coming Soon</h3>
+        <h3>Cinnamon roll</h3>
         <button class="read-more-btn">the recipe</button>
        <p class="more-text">
 زي الغيوم وتذوب ف الفم 😋<br>
@@ -163,7 +163,7 @@
 
       <div class="menu-item">
         <img src="assets/images/sweet4.jpg" alt="Dessert 4" />
-        <h3>Coming Soon</h3>
+        <h3>Strawberry jam</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">
 <strong>الطريقة:</strong><br>
