--- a/dessert.html
+++ b/dessert.html
@@ -79,10 +79,10 @@
 </p>
       </div>
 
-      <!-- وصفات "Coming Soon" -->
+
       <div class="menu-item">
         <img src="assets/images/sweet2.jpg" alt="Dessert 2" />
-        <h3>caramel cream</h3>
+        <h3>Crème caramel</h3>
         <button class="read-more-btn">the recipe</button>
        <p class="more-text">
 <strong>للكراميل:</strong><br>
@@ -207,7 +207,7 @@
 
         <div class="menu-item">
         <img src="assets/images/sweet6.jpg" alt="Dessert 4" />
-        <h3>Coming Soon</h3>
+        <h3>Basbousa</h3>
         <button class="read-more-btn">the recipe</button>
         <p class="more-text">
 <strong>المكونات:</strong><br>
@@ -231,7 +231,7 @@
 
         <div class="menu-item">
         <img src="assets/images/sweet7.jpg" alt="Dessert 4" />
-        <h3>Coming Soon</h3>
+        <h3>Umm Ali</h3>
         <button class="read-more-btn">the recipe</button>
        <p class="more-text">
 
