--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <section class="instagram" style="margin-top:40px; text-align:center;">
       <div class="menu-item" style="display:inline-block; margin:15px;">
         <img class="insta" src="assets/images/instagram.png" alt="Instagram""/>
-        <h3>@gotof.cuisines</h3>
+        <h3><a href="https://www.instagram.com/gotof.cuisines" target="_blank">@gotof.cuisines</a></h3>
       </div>
     </section>
   </main>
