--- a/dessert.html
+++ b/dessert.html
@@ -31,6 +31,11 @@
       max-width: 400px;
       border-radius: 10px;
     }
+    a {
+      color: #8b5cf6;
+      text-decoration: none;
+    }
+    
   </style>
 </head>
 <body>
